tests/trybuild/stages/flush_with_colon.rs
use brood::system::schedule::stages;

type Stages = stages!{
    flush: value,
};

fn main() {}
